added coding challenges

--- a/Python-Coding-Challenges/01-Beginners_Level/Coding_Questions.ipynb
+++ b/Python-Coding-Challenges/01-Beginners_Level/Coding_Questions.ipynb
@@ -39,32 +39,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 2nd Approach\n",
     "def palindrom(value:str):\n",
@@ -80,6 +57,27 @@
     "val1 = palindrom(\"MADAM\")\n",
     "val2 = palindrom(\"MADAMS\")\n",
     "print(val1, val2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check if a value is palandrom for int \n",
+    "def palandrom():\n",
+    "    n = 12221\n",
+    "    nums = n\n",
+    "    result = 0\n",
+    "    while nums > 0:\n",
+    "        id = nums%10\n",
+    "        result = (result*10)+id\n",
+    "        nums = nums//10\n",
+    "        print(result)\n",
+    "    return n==result\n",
+    "\n",
+    "print(palandrom())"
    ]
   },
   {
