--- a/Python_Essentials/01_basics/05_List.ipynb
+++ b/Python_Essentials/01_basics/05_List.ipynb
@@ -78,7 +78,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "my_list = ['apple', 'banana', 'cherry']"
+   ]
   },
   {
    "cell_type": "markdown",
