added sorting algo

--- a/Python-Coding-Challenges/DSA/01_Extraction_of_digits/Extraction_of_digits.ipynb
+++ b/Python-Coding-Challenges/DSA/01_Extraction_of_digits/Extraction_of_digits.ipynb
@@ -113,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Print the Factors of a Given Number."
+    "5. Print the **Factors** of a Given Number."
    ]
   },
   {
@@ -228,31 +228,6 @@
     "    else:\n",
     "        print(0)\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Character Hashing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "s = ''\n",
-    "q = ''"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
