--- a/Python_Code_Snippets/sampleFile.ipynb
+++ b/Python_Code_Snippets/sampleFile.ipynb
@@ -191,7 +191,117 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "!pip install pyautogui"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moving mouse left and right. Press Ctrl+C to stop.\n",
+      "\n",
+      "Movement stopped by user.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pyautogui\n",
+    "import time\n",
+    "\n",
+    "try:\n",
+    "    print(\"Moving mouse left and right. Press Ctrl+C to stop.\")\n",
+    "    while True:\n",
+    "        pyautogui.moveRel(100, 0, duration=0.5)  # Move right by 100 pixels\n",
+    "        time.sleep(0.5)\n",
+    "        pyautogui.moveRel(-100, 0, duration=0.5) # Move left by 100 pixels\n",
+    "        time.sleep(0.5)\n",
+    "except KeyboardInterrupt:\n",
+    "    print(\"\\nMovement stopped by user.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyautogui\n",
+    "import time\n",
+    "import random\n",
+    "import subprocess\n",
+    "import psutil\n",
+    "import win32gui\n",
+    "import win32process\n",
+    "\n",
+    "# Random sentences\n",
+    "sentences = [\n",
+    "    \"The quick brown fox jumps over the lazy dog.\",\n",
+    "    \"Python is fun and powerful.\",\n",
+    "    \"Automating tasks can save a lot of time.\",\n",
+    "    \"Errors are opportunities to learn.\",\n",
+    "    \"One step at a time.\"\n",
+    "]\n",
+    "\n",
+    "# Function to check if Notepad window is still open\n",
+    "def is_notepad_window_open(pid):\n",
+    "    def callback(hwnd, pid_list):\n",
+    "        try:\n",
+    "            _, win_pid = win32process.GetWindowThreadProcessId(hwnd)\n",
+    "            if win_pid == pid and win32gui.IsWindowVisible(hwnd):\n",
+    "                pid_list.append(True)\n",
+    "        except:\n",
+    "            pass\n",
+    "        return True\n",
+    "\n",
+    "    visible_windows = []\n",
+    "    win32gui.EnumWindows(callback, visible_windows)\n",
+    "    return bool(visible_windows)\n",
+    "\n",
+    "# Launch Notepad and get process\n",
+    "notepad_process = subprocess.Popen(\"notepad.exe\")\n",
+    "time.sleep(2)\n",
+    "\n",
+    "try:\n",
+    "    print(\"Typing... Close Notepad to simulate 'Don't Save', or press Ctrl+C.\")\n",
+    "    while True:\n",
+    "        if not is_notepad_window_open(notepad_process.pid):\n",
+    "            print(\"Detected Notepad was closed. Simulating 'Don't Save'...\")\n",
+    "\n",
+    "            # Wait a bit for Save dialog to appear\n",
+    "            time.sleep(1)\n",
+    "\n",
+    "            # Press 'Tab' to move focus from 'Save' to 'Don't Save', then press 'Enter'\n",
+    "            pyautogui.press('tab')     # Focus: Save -> Don't Save\n",
+    "            time.sleep(0.2)\n",
+    "            pyautogui.press('enter')   # Select Don't Save\n",
+    "            break\n",
+    "\n",
+    "        sentence = random.choice(sentences)\n",
+    "        pyautogui.typewrite(sentence + \"\\n\", interval=0.05)\n",
+    "        time.sleep(1)\n",
+    "\n",
+    "except KeyboardInterrupt:\n",
+    "    print(\"\\nKeyboard interrupt detected. Simulating Notepad close without saving...\")\n",
+    "    # Simulate Alt+F4 to close\n",
+    "    pyautogui.hotkey('alt', 'f4')\n",
+    "    time.sleep(1)\n",
+    "    pyautogui.press('tab')\n",
+    "    time.sleep(0.2)\n",
+    "    pyautogui.press('enter')\n"
+   ]
   }
  ],
  "metadata": {
