added few more sorting algos

--- a/Python-Coding-Challenges/DSA/01_Extraction_of_digits/Extraction_of_digits.ipynb
+++ b/Python-Coding-Challenges/DSA/01_Extraction_of_digits/Extraction_of_digits.ipynb
@@ -11,9 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "7\n",
+      "8\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# dividend = 17\n",
     "# divisor = 5\n",
@@ -92,9 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def armstrong(): # Armstrong number\n",
     "    n = 1634\n",
