--- a/Python-Coding-Challenges/DSA/01_Extraction_of_digits/Extraction_of_digits.ipynb
+++ b/Python-Coding-Challenges/DSA/01_Extraction_of_digits/Extraction_of_digits.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -149,17 +149,53 @@
     }
    ],
    "source": [
+    "# BRUTE force way to find all divisors of a number\n",
+    "n = 36\n",
+    "result = []\n",
+    "for i in range(1, n+1): # 1 to 36 (inclusive)\n",
+    "    if n%i == 0: # 36 % 1 == 0, 36 % 2 == 0, ..., 36 % 36 == 0\n",
+    "        result.append(i)\n",
+    "result.sort()\n",
+    "print(result) # [1, 2, 3, 4, 6, 9, 12, 18, 36]\n",
+    "# Time complexity: O(n)\n",
+    "# Space complexity: O(k) where k is the number of divisors\n",
+    "# Space complexity: O(1) if we don't count the output list\n",
+    "# Space complexity: O(n) if we count the output list \n",
+    "\n",
+    "\n",
+    "# Better way to find all divisors of a number\n",
+    "n = 36\n",
+    "result = []\n",
+    "for i in range(1, n//2+1): # 1 to 18 (inclusive)\n",
+    "    if n%i == 0: # 36 % 1 == 0, 36 % 2 == 0, ..., 36 % 18 == 0\n",
+    "        result.append(i)\n",
+    "result.append(n) # 36 is also a divisor of 36\n",
+    "\n",
+    "result.sort()\n",
+    "print(result) # [1, 2, 3, 4, 6, 9, 12, 18, 36]\n",
+    "# Time complexity: O(n/2) = O(n)\n",
+    "# Space complexity: O(k) where k is the number of divisors\n",
+    "# Space complexity: O(1) if we don't count the output list\n",
+    "# Space complexity: O(n) if we count the output list\n",
+    "\n",
+    "\n",
+    "# Optimal way to find all divisors of a number\n",
     "from math import sqrt\n",
     "\n",
     "n = 36\n",
     "result = []\n",
-    "for i in range(1,int(sqrt(n))+1):\n",
-    "    if n%i == 0:\n",
+    "for i in range(1,int(sqrt(n))+1): # 1 to 6 (inclusive)\n",
+    "    # 1, 2, 3, 4, 6\n",
+    "    if n%i == 0: # 36 % 1 == 0, 36 % 2 == 0, 36 % 3 == 0, 36 % 4 == 0, 36 % 6 == 0\n",
     "        result.append(i)\n",
-    "    if n//i != i:\n",
+    "    if n//i != i: # 36 // 1 != 1, 36 // 2 != 2, 36 // 3 != 3, 36 // 4 != 4, 36 // 6 != 6 \n",
+    "        # 36//1 = 36, 36//2 = 18, 36//3 = 12, 36//4 = 9, 36//6 = 6\n",
     "        result.append(n//i)\n",
     "result.sort()\n",
-    "print(result)"
+    "print(result) # [1, 2, 3, 4, 6, 9, 12, 18, 36]\n",
+    "# Time complexity: O(sqrt(n)) \n",
+    "# Space complexity: O(1) if we don't count the output list\n",
+    "# Space complexity: O(k) where k is the number of divisors\n"
    ]
   },
   {
@@ -208,6 +244,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Highest / Lowest Frequency Elements: Frequency of the Most Frequent Element\n",
+    "\n",
     "n = [5,3,2,2,1,5,5,7,5,10]\n",
     "m = [10,111,1,9,5,67,2]\n",
     "\n",
@@ -222,6 +260,8 @@
     "        print(0)\n",
     "    else:\n",
     "        print(hash_list[j])\n",
+    "\n",
+    "# output: 1 0 1 0 4 0 2 0\n",
     "\n",
     "# Time complexity: O(n+m) \n",
     "# Space complexity: O(n)\n",
@@ -245,7 +285,7 @@
     "    if j in hash_values:\n",
     "        print(hash_values[j])\n",
     "    else:\n",
-    "        print(0)\n"
+    "        print(0)"
    ]
   },
   {
